order-reception/src/main/kotlin/com/example/orderreception/error/exception/OrderReceptionIllegalArgumentException.kt
package com.example.orderreception.error.exception

import com.example.orderreception.error.ValidationError

class OrderReceptionIllegalArgumentException(val validationErrors: List<ValidationError>) : Exception()